[gd_scene load_steps=9 format=2]

[ext_resource path="res://ChooseMiniGame.gd" type="Script" id=1]
[ext_resource path="res://assets/MainMenu/fonts/power_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/BasquetePreview.png" type="Texture" id=3]
[ext_resource path="res://assets/MainMenu/Selected.png" type="Texture" id=4]
[ext_resource path="res://Sprites/FlorestaPreview.png" type="Texture" id=5]
[ext_resource path="res://Sprites/vinicolaPreview.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )
fallback/0 = SubResource( 1 )

[node name="ChooseMiniGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 332.001
margin_top = 15.4419
margin_right = 944.001
margin_bottom = 63.4419
custom_fonts/font = SubResource( 2 )
text = "Choose Mini Game"
align = 1
valign = 1

[node name="Figuras" type="Node2D" parent="."]
position = Vector2( 0, -12.954 )
__meta__ = {
"_edit_group_": true
}

[node name="Basquete1" type="Sprite" parent="Figuras"]
editor/display_folded = true
position = Vector2( 130, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola1" type="Sprite" parent="Figuras"]
editor/display_folded = true
position = Vector2( 480, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta1" type="Sprite" parent="Figuras"]
editor/display_folded = true
position = Vector2( 830, 98.374 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta1"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Basquete3" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 126.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola3" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 476.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta3" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 826.869, 312.854 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta3"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Basquete" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 130, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Basquete"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Vinicola" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 480, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Vinicola"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false

[node name="Floresta" type="Sprite" parent="Figuras"]
editor/display_folded = true
visible = false
position = Vector2( 830, 525.683 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="Selected" type="Sprite" parent="Figuras/Floresta"]
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
centered = false
